--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   csv: ^5.0.0
-  path_provider: ^2.0.14
+  path_provider: ^2.0.12
+  intl: ^0.18.0
+  url_launcher: ^6.1.7
 
 
   # The following adds the Cupertino Icons font to your application.
